# QuizGenerator

./: Project.md  README.md
news-analyzer/: pyproject.toml
news-analyzer/analyzer_agents/: README.md  pyproject.toml
news-analyzer/analyzer_agents/src/analyzer_agents/: analyzed_news.json  crew.py  curated_news.json  headlines.json  korean_analyzed_news.json  log.txt  main.py  news.json  quiz.json
news-analyzer/analyzer_agents/src/analyzer_agents/config/: agents.yaml  tasks.yaml
news-analyzer/analyzer_agents/src/analyzer_agents/tools/: custom_tool.py
news-analyzer/tests/: naver_api_test.py  naver_headline_test.py
