[tool.poetry]
name = "news-analyzer"
version = "0.1.0"
description = ""
authors = ["Jong Hyun Park <jonhpark7966@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
requests = "^2.32.3"
crewai = "^0.51.1"
crewai-tools = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
